data/derived/sp14/progs/unify/prog1579.ml.out
Characters 25-26:
  let _ = app (fun y-> y) [1;2;4];;
                           ^
Error: This expression has type int but an expression was expected of type
         unit
